force-app/main/default/objects/PredictionValues__c/PredictionValues__c.object-meta.xml
<CustomObject>
    <label>Case Classification</label>
    <nameField>
        <label>Classification Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>