force-app/main/default/objects/PredictionValues__c/fields/BizUnit__c.field-meta.xml
<CustomField>
    <fullName>BizUnit__c</fullName>
    <label>BizUnit</label>
    <length>15</length>
    <type>Text</type>
</CustomField>