force-app/main/default/objects/PredictionValues__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>CaseNumber</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>