force-app/main/default/objects/PredictionValues__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Symptom</label>
    <type>Checkbox</type>
</CustomField>