force-app/main/default/objects/PredictionValues__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>For historic tracking/logging from case classification</description>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>