force-app/main/default/objects/PredictionValues__c/fields/Manual_CC__c.field-meta.xml
<CustomField>
    <fullName>Manual_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual CC</label>
    <type>Checkbox</type>
</CustomField>