force-app/main/default/objects/PredictionValues__c/fields/Model_CC__c.field-meta.xml
<CustomField>
    <fullName>Model_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Model CC</label>
    <type>Checkbox</type>
</CustomField>