force-app/main/default/objects/PredictionValues__c/fields/Prediction_Name__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Name__c</fullName>
    <label>Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>