force-app/main/default/objects/PredictionValues__c/fields/Provided_by__c.field-meta.xml
<CustomField>
    <fullName>Provided_by__c</fullName>
    <label>Provided by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>