force-app/main/default/objects/PredictionValues__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolution</label>
    <type>Checkbox</type>
</CustomField>