force-app/main/default/objects/PredictionValues__c/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <description>Task ID</description>
    <label>Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>