force-app/main/default/objects/PredictionValues__c/fields/Total_CSG__c.field-meta.xml
<CustomField>
    <fullName>Total_CSG__c</fullName>
    <formula>if( BizUnit__c = &quot;CSG&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CSG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>