force-app/main/default/objects/PredictionValues__c/fields/Total_ISG__c.field-meta.xml
<CustomField>
    <fullName>Total_ISG__c</fullName>
    <formula>if( BizUnit__c =&quot;ISG&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total ISG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>